infra/k8s/deployment/development.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shortlet-landing-development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shortlet-landing-development-app
  template:
    metadata:
      labels:
        app: shortlet-landing-development-app
    spec:
      containers:
        - name: shortlet-landing-development-app
          image: europe-west3-docker.pkg.dev/shortlet-app-project/shortlet-app/landing-web:latest
          resources:
            requests:
              memory: 20Mi
              cpu: 10m
            limits:
              memory: 256Mi
              cpu: 300m
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: shortlet-landing-development
spec:
  selector:
    app: shortlet-landing-development-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 4000
      protocol: TCP
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shortlet-landing-development-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: 'true'
    nginx.ingress.kubernetes.io/server-alias: 'www.landing-dev.shortlet.app'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - landing-dev.shortlet.app
      secretName: shortlet-tls
  rules:
    - host: landing-dev.shortlet.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shortlet-landing-development
                port:
                  number: 80
