infra/k8s/deployment/production.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shortlet-landing-production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shortlet-landing-production-app
  template:
    metadata:
      labels:
        app: shortlet-landing-production-app
    spec:
      containers:
        - name: shortlet-landing-production-app
          image: europe-west3-docker.pkg.dev/shortlet-app-project/shortlet-app/landing-web:latest
          resources:
            requests:
              memory: 40Mi
              cpu: 20m
            limits:
              memory: 256Mi
              cpu: 300m
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: shortlet-landing-production
spec:
  selector:
    app: shortlet-landing-production-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 4000
      protocol: TCP
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shortlet-landing-production-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: 'true'
    nginx.ingress.kubernetes.io/server-alias: 'www.shortlet.app'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - shortlet.app
        - landing.shortlet.app
      secretName: shortlet-tls
  rules:
    - host: shortlet.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shortlet-landing-production
                port:
                  number: 80
    - host: landing.shortlet.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shortlet-landing-production
                port:
                  number: 80
